# medical_agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_REVIEW.md  README.md  REFACTORING_REPORT.md  REQUIREMENT.md  SKILL_POOL_IMPLEMENTATION.md  TEST.md  check_table.py  check_token_usage.py  debug_tool.py  docker-compose.yml  fly.toml  inspect_kimi_chunks.py  pyproject.toml  pytest.ini  render.yaml  reproduce_issue.py  reproduce_latency.py  run_tests.sh  start-celery-worker.sh  test.db  test_auth.db  test_delegation.py  test_integration.db  test_integration_chat.db  test_patient_query.py  test_sse.py  test_streaming.py  test_streaming.sh  test_tool_reuse.py  test_tools.py  verify_records.py
.claude/: .env.example
alembic/: env.py
alembic/versions/: 001_create_skill_tables.py  001_init.py  002_intake_nullable_columns.py  003_drop_unused_intake_columns.py  004_add_rooms.py  004_add_visit_steps.py  005_room_visit_unique.py  006_add_imaging_segmentation_result.py  007_add_imaging_slice_index.py  008_intake_phone_nullable.py  009_imaging_segmentation_status.py  00a5b9fa67ca_drop_sub_agents_add_agent_role.py  010_add_imaging_volume_depth.py  23cb51726151_add_departments_table_and_visit_.py  251125_add_patient_health_summary.py  251126_add_id_to_tools.py  251126_add_imaging_group_id.py  251127_create_base_schema.py  260322_add_fk_indexes.py  260327_fix_users_table_schema.py  260328_add_doctor_fields_to_visits.py  260329_add_urgency_to_visits.py  260329b_create_orders_table.py  260329c_orders_fulfillment.py  260331_create_case_threads.py  412ff87d3456_merge_multiple_heads.py  (+7 more)
config/: default.yaml  memory.yaml
docs/: DB_ONLY_MODE.md  EXTENSIBLE_ARCHITECTURE.md  SEMANTIC_SEARCH.md  SEMANTIC_SKILL_SEARCH.md  TOOL_SEARCH.md  test-intake-flow.md
eval/: api_client.py  case_loader.py  conftest.py  doctor_simulator.py  intake_simulator.py  judge.py  patient_seeder.py  report.py  runner.py  scorer.py
scripts/: capture_agent_response.py  check_main_agent_tools.py  debug_agent_config.py  debug_patient_references.py  migrate_skills_to_db.py  show_decision_context.py  test_agent_info_tool.py  test_both_loaders.py  test_builtin_only.py  test_detection_flow.py  test_doctor_flow.py  test_dynamic_delegation.py  test_e2e_patient_query.py  test_first_task.py  test_full_flow.py  test_patient_detection_live.sh  test_patient_query_flow.py  test_patient_refs_direct.py  test_patient_tool.py  test_patient_tool_direct.py  test_patient_tool_function.py  test_scope_enforcement.py
segmentation-mcp/: Dockerfile.mcp  mcp_server.py  requirements-mcp.txt
segmentation-service/: Dockerfile  inference.py  requirements.txt  server.py
src/: __init__.py  main.py
tests/: __init__.py  conftest.py  reproduce_delegation.py  requirements.txt  test_agent.py  test_agent_registry.py  test_agent_step.py  test_agent_with_tools.py  test_api.py  test_ask_user_tool.py  test_case_thread_model.py  test_case_threads_api.py  test_chat_api.py  test_clinical_models.py  test_config.py  test_context.py  test_database_ssl.py  test_datetime_tool.py  test_delegation_fix.py  test_department_api.py  test_department_model.py  test_doctor_tools.py  test_dynamic_tool_loading.py  test_e2e_langgraph.py  test_form_request_registry.py  test_form_response_endpoint.py  test_form_templates.py  test_forms_vault.py  test_gemini.py  test_hospital_stats.py  test_intake_flow.py  test_intake_redesign.py  test_intake_submission_model.py  test_internist_structured_output.py  test_introspection_tool.py  test_langgraph_agent.py  test_location_tool.py  test_medical_flow.py  test_openai.py  test_output_schema_unit.py  (+18 more)
video/: package-lock.json  package.json  tsconfig.json
web/: README.md  package-lock.json  package.json
(+567 files in other folders)
